refactor: align collection type with provisioning flow (#52)